ChangeLog for ircd-seven
========================

This file lists every change made except typo and formatting fixes, which are
only listed in SVN log. For a summary of what has changed between releases,
see the NEWS file.

2006-09-25 Stephen Bennett <spb@gentoo.org>

	* modules/core/m_message.c, modules/m_scan.c: Clean up some compiler
	warnings.

2006-09-25 Stephen Bennett <spb@gentoo.org>

	* modules/m_version.c: Update version reply to reflect that fact that
	auspexed opers can see all user information.

2006-09-25 Stephen Bennett <spb@gentoo.org>

	* doc/example.conf, doc/reference.conf: Update example configs for
	allowed_snomask.

2006-09-25 Stephen Bennett <spb@gentoo.org>

	* include/client.h, include/s_newconf.h, src/newconf.c, src/s_user.c:
	Implement allowed_snomask setting in oper block.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* modules/m_stats.c: Add back in the STATS spy hooks; apparently
	they're used for more than spying.

2006-09-24 Elfyn McBratney <beu@freenode.net>

	* modules/core/m_kill.c: Disallow the killing of network services
	(+S clients).

2006-09-24 Elfyn McBratney <beu@freenode.net>

	* doc/example.conf, doc/reference.conf: Make example.conf more concise
	and touch-up formatting in reference.conf.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* include/client.h, src/newconf.c, src/s_user.c, src/s_conf.c,
	help/opers/umode, -help/opers/locops, doc/reference.conf,
	doc/example.conf, doc/sgml/oper-guide/config.sgml,
	doc/sgml/oper-guide/umodes.sgml, modules/Makefile.in,
	-modules/m_locops.c, modules/m_wallops.c, modules/m_stats.c,
	+old/modules/m_locops.c: Remove LOCOPS.

2006-09-24 Elfyn McBratney <beu@freenode.net>

	* extensions/ip_cloaking.c, extensions/hurt.c,
	extensions/no_oper_invis.c: Move to unsupported/ until their fate is
	decided; adjust example.conf and reference.conf accordingly.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c,