@@ -96,10 +96,12 @@ struct remote_conf
 #define SHARED_PRESV	0x0100
 #define SHARED_UNRESV	0x0200
 #define SHARED_REHASH	0x0400
+#define SHARED_DLINE	0x0800
 
 #define SHARED_ALL	(SHARED_TKLINE | SHARED_PKLINE | SHARED_UNKLINE |\
 			SHARED_PXLINE | SHARED_TXLINE | SHARED_UNXLINE |\
-			SHARED_TRESV | SHARED_PRESV | SHARED_UNRESV)
+			SHARED_TRESV | SHARED_PRESV | SHARED_UNRESV | \
+			SHARED_DLINE)
 #define CLUSTER_ALL	SHARED_ALL
 
 /* flags used in hub/leaf */
