@@ -369,6 +369,7 @@ static struct mode_table cluster_table[] = {
 	{ "resv",	SHARED_PRESV	},
 	{ "tresv",	SHARED_TRESV	},
 	{ "unresv",	SHARED_UNRESV	},
+	{ "dline",	SHARED_DLINE	},
 	{ "all",	CLUSTER_ALL	},
 	{NULL, 0}
 };
@@ -385,6 +386,7 @@ static struct mode_table shared_table[] =
 	{ "tresv",	SHARED_TRESV	},
 	{ "unresv",	SHARED_UNRESV	},
 	{ "rehash",	SHARED_REHASH	},
+	{ "dline",	SHARED_DLINE	},
 	{ "all",	SHARED_ALL	},
 	{ "none",	0		},
 	{NULL, 0}
